ontol/ontol-compiler/test-cases/error/rel/definition_not_found.on
def foo ()
rel foo 'bar':
    baz // ERROR definition not found in this scope
